# fagman

./: Cargo.toml  README  README.md  make.sh
fagman/DEBIAN/: control
fagman/usr/share/applications/: fagman.desktop
src/: main.rs
